// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate loader options should throw an error on the "filename" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   string | function
   -> Allows to set the filename for the generated asset.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#filename-1
   Details:
    * options.filename should be a string.
    * options.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "filename" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   string | function
   -> Allows to set the filename for the generated asset.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#filename-1
   Details:
    * options.filename should be a string.
    * options.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "filename" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   string | function
   -> Allows to set the filename for the generated asset.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#filename-1
   Details:
    * options.filename should be a string.
    * options.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "filter" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#filter-1"
`;

exports[`validate loader options should throw an error on the "filter" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#filter-1"
`;

exports[`validate loader options should throw an error on the "filter" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#filter-1"
`;

exports[`validate loader options should throw an error on the "filter" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#filter-1"
`;

exports[`validate loader options should throw an error on the "filter" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#filter-1"
`;

exports[`validate loader options should throw an error on the "filter" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#filter-1"
`;

exports[`validate loader options should throw an error on the "generator" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be a non-empty array.
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "generator" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be an array:
   [object { implementation?, preset?, options? }, ...] (should not have fewer than 1 item)
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "generator" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be an array:
   [object { implementation?, preset?, options? }, ...] (should not have fewer than 1 item)
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "generator" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be an array:
   [object { implementation?, preset?, options? }, ...] (should not have fewer than 1 item)
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "generator" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be an array:
   [object { implementation?, preset?, options? }, ...] (should not have fewer than 1 item)
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "minimizer" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be a non-empty array."
`;

exports[`validate loader options should throw an error on the "minimizer" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be one of these:
   [object { implementation?, options? }, ...] (should not have fewer than 1 item) | object { implementation?, options? }
   -> Allows you to setup the minimizer function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizer
   Details:
    * options.minimizer should be an array:
      [object { implementation?, options? }, ...] (should not have fewer than 1 item)
    * options.minimizer should be an object:
      object { implementation?, options? }"
`;

exports[`validate loader options should throw an error on the "minimizer" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be one of these:
   [object { implementation?, options? }, ...] (should not have fewer than 1 item) | object { implementation?, options? }
   -> Allows you to setup the minimizer function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizer
   Details:
    * options.minimizer should be an array:
      [object { implementation?, options? }, ...] (should not have fewer than 1 item)
    * options.minimizer should be an object:
      object { implementation?, options? }"
`;

exports[`validate loader options should throw an error on the "minimizer" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be one of these:
   [object { implementation?, options? }, ...] (should not have fewer than 1 item) | object { implementation?, options? }
   -> Allows you to setup the minimizer function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizer
   Details:
    * options.minimizer should be an array:
      [object { implementation?, options? }, ...] (should not have fewer than 1 item)
    * options.minimizer should be an object:
      object { implementation?, options? }"
`;

exports[`validate loader options should throw an error on the "minimizer" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be one of these:
   [object { implementation?, options? }, ...] (should not have fewer than 1 item) | object { implementation?, options? }
   -> Allows you to setup the minimizer function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizer
   Details:
    * options.minimizer should be an array:
      [object { implementation?, options? }, ...] (should not have fewer than 1 item)
    * options.minimizer should be an object:
      object { implementation?, options? }"
`;

exports[`validate loader options should throw an error on the "severityError" option with "() => {}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "severityError" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "severityError" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "severityError" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "severityError" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "unknown" option with "/test/" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, filter?, filename?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, filter?, filename?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "{"foo":"bar"}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, filter?, filename?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, filter?, filename?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, filter?, filename?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, filter?, filename?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "test" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, filter?, filename?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, filter?, filename?, severityError? }"
`;
